--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,9 +33,11 @@
 -->
 
 <!-- <app-iric></app-iric> -->
-<app-suma></app-suma>
+<!-- <app-suma></app-suma>
 <hr>
 <br>
-<app-operas-bas></app-operas-bas>
+<app-operas-bas></app-operas-bas> -->
+<router-outlet></router-outlet>
+<!-- <app-alumno-reactive></app-alumno-reactive> -->
   </div>
 </div>
