--- a/src/app/grupos/iric/iric.component.html
+++ b/src/app/grupos/iric/iric.component.html
@@ -12,34 +12,37 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h3>Filtro:{{listFilter}} </h3>
+                <h3>Filtro: {{listFilter}}</h3>
             </div>
         </div>
         <div class="table-responsive">
-            <table class="table" >
+            <table class="table" *ngIf="alumnosIric.length">
                 <thead>
                     <tr>
-                    <th>
-                        <button (click)="showImage()" class="btn btn-primary" type="button"> 
-                             {{muestraImg?'Oculta ':'Muestra'}}Imagen</button>
-                    </th>
-                    <th>Foto</th>
-                    <th>Matricula</th>
-                    <th>Nombre</th>
-                    <th>Edad</th>
-                    <th>Correo</th>
+                        <th>
+                            <button (click)="showImage()" class="btn btn-primary" type="button">
+                                {{muestraImg?'Oculta ':'Muestra '}}Imagen</button>
+                        </th>
+                        <th>Matricula</th>
+                        <th>Nombre</th>
+                        <th>Edad</th>
+                        <th>Correo</th>
+                        <!--<th>Foto</th>-->
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let alumno of alumnosIric">
+                    <tr *ngFor="let alumno of alumnosIric | alumnoFilter:listFilter">
                         <td><img *ngIf="muestraImg" [src]="alumno.foto"
                             [title]="alumno.nombre"
                             [style.width.px]="imageWidth"
                             [style.margin.px]="imageMargin"></td>
                         <td>{{alumno.matricula}}</td>
-                        <td>{{alumno.nombre}}</td>
+                        <td>{{alumno.nombre | uppercase}}</td>
                         <td>{{alumno.edad}}</td>
                         <td>{{alumno.correo}}</td>
+                        <td>{{alumno.calif}}</td>
+                        <td><app-calificacion-alum (calificaClik)="onCalificaClick($event)" [califica]="alumno.calif" ></app-calificacion-alum></td>
+                        <!--<td>{{alumno.foto}}</td>-->
                     </tr>
                 </tbody>
             </table>
