--- a/src/app/grupos/menu/menu.component.html
+++ b/src/app/grupos/menu/menu.component.html
@@ -10,14 +10,16 @@
     <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" routelink="/home">
-                Home</a>
+                <a class="nav-link" routelink="/HomeComponent">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/IricComponent">Iric</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/OperasBasComponent">OperasBas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/AlumnoReactiveComponent">FormulariosReactivos</a>
             </li>
         </ul>
     </div>
